# sidpy

./: .buildinfo  .gitignore  .travis.yml  README.rst  contact.html  contribute.html  external_guides.html  extras_require.txt  genindex.html  getting_started.html  index.html  install.html  matlab.html  objects.inv  plot_misc.ipynb  py-modindex.html  pyproject.toml  search.html  searchindex.js  server_user_id.txt  setup.cfg  setup.py
.doctrees/: contact.doctree  contribute.doctree  external_guides.doctree  getting_started.doctree  index.doctree  install.doctree  matlab.doctree
_autosummary/: sidpy.base.dict_utils.flatten_dict.html  sidpy.base.dict_utils.html  sidpy.base.dict_utils.merge_dicts.html  sidpy.base.dict_utils.nest_dict.html  sidpy.base.dict_utils.nested_dict_from_flattened_key.html  sidpy.base.dict_utils.print_nested_dict.html  sidpy.base.html  sidpy.base.num_utils.build_ind_val_matrices.html  sidpy.base.num_utils.contains_integers.html  sidpy.base.num_utils.convert_length.html  sidpy.base.num_utils.from_meters.html  sidpy.base.num_utils.get_exponent.html  sidpy.base.num_utils.get_slope.html  sidpy.base.num_utils.html  sidpy.base.num_utils.integers_to_slices.html  sidpy.base.num_utils.to_meters.html  sidpy.base.num_utils.to_ranges.html  sidpy.base.string_utils.clean_string_att.html  sidpy.base.string_utils.format_quantity.html  sidpy.base.string_utils.format_size.html  sidpy.base.string_utils.format_time.html  sidpy.base.string_utils.formatted_str_to_number.html  sidpy.base.string_utils.get_time_stamp.html  sidpy.base.string_utils.html  sidpy.base.string_utils.remove_extra_delimiters.html  sidpy.base.string_utils.str_to_other.html  sidpy.base.string_utils.validate_list_of_strings.html  sidpy.base.string_utils.validate_single_string_arg.html  sidpy.base.string_utils.validate_string_args.html  sidpy.hdf.dtype_utils.check_dtype.html  sidpy.hdf.dtype_utils.flatten_complex_to_real.html  sidpy.hdf.dtype_utils.flatten_compound_to_real.html  sidpy.hdf.dtype_utils.flatten_to_real.html  sidpy.hdf.dtype_utils.get_compound_sub_dtypes.html  sidpy.hdf.dtype_utils.html  sidpy.hdf.dtype_utils.is_complex_dtype.html  sidpy.hdf.dtype_utils.stack_real_to_complex.html  sidpy.hdf.dtype_utils.stack_real_to_compound.html  sidpy.hdf.dtype_utils.stack_real_to_target_dtype.html  sidpy.hdf.dtype_utils.validate_dtype.html  (+136 more)
_modules/: index.html
(+608 files in other folders)
